added features